@@ -433,9 +433,7 @@ class HasManyAssociationsTest < Test::Unit::TestCase
   end
 
   def test_counting_with_single_conditions
-    assert_deprecated 'count' do
-      assert_equal 2, Firm.find(:first).plain_clients.count('1=1')
-    end
+    assert_equal 2, Firm.find(:first).plain_clients.count(:conditions => '1=1')
   end
 
   def test_counting_with_single_hash
