@@ -1330,11 +1330,8 @@ class BasicsTest < Test::Unit::TestCase
 
   def test_count_with_join
     res = Post.count_by_sql "SELECT COUNT(*) FROM posts LEFT JOIN comments ON posts.id=comments.post_id WHERE posts.#{QUOTED_TYPE} = 'Post'"
-    res2 = nil
-    assert_deprecated 'count' do
-      res2 = Post.count("posts.#{QUOTED_TYPE} = 'Post'",
-                        "LEFT JOIN comments ON posts.id=comments.post_id")
-    end
+    
+    res2 = Post.count(:conditions => "posts.#{QUOTED_TYPE} = 'Post'", :joins => "LEFT JOIN comments ON posts.id=comments.post_id")
     assert_equal res, res2
     
     res3 = nil
